# pytest_plugin_template

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/pytest_plugin/: plugin.py
src/pytest_plugin/mytool/: mytool.py
test/: test_hello.py
