[project]
authors = [{ name = "Guillermo Gil", email = "guillegil@proton.me" }]
dependencies = ["pytest>=7"]
description = "My Pytest Plugin"
version = "0.1.0"
license = "MIT"
name = "my-pytest-plugin-name"
readme = "README.md"
requires-python = ">=3.9"
urls = { homepage = "https://mypluginurl.com", repository = "https://github.com/guillegil/pytest-plugin-template" }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points."pytest11"]
report = "pytest_plugin.plugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytest_plugin*"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::pytest.PytestUnknownMarkWarning"]
